Fixed header being too wide.

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -104,7 +104,7 @@ a {
 @media only screen and (max-width: 1024px) {
     #headercontainer {
         position: fixed;
-        width: 100vw;
+        width: 100%;
         height: 40px;
         border-right: none;
         border-bottom: 17px solid transparent;
